miatoll: wifi: Configure correct overlay configuration.
ag/16564596 will change default value to false.
Configure correct overlay configuration.

Bug: 212488775
Test: manual test & build
Change-Id: Iaf1a0a23dae69fde5995e591a757a8ef5374d5b5

--- a/overlay/WifiOverlay/res/values/config.xml
+++ b/overlay/WifiOverlay/res/values/config.xml
@@ -64,4 +64,7 @@
     <!-- Boolean indicating that wifi only link configuratios that have exact same credentials (i.e PSK) -->
     <bool name="config_wifi_only_link_same_credential_configurations">false</bool>
 
+    <!-- Indicate the driver support NL80211_REG_CHANGED event. -->
+    <bool name="config_wifiDriverSupportedNl80211RegChangedEvent">true</bool>
+
 </resources>
