--- a/overlay/SM6250Settings/res/values/config.xml
+++ b/overlay/SM6250Settings/res/values/config.xml
@@ -19,4 +19,6 @@
     <bool name="config_show_refresh_rate_controls">true</bool>
     <bool name="config_supports_dynamic_refresh_rate_controls">false</bool>
 
+    <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">true</bool>
 </resources>
