--- a/overlay/SM6250SystemUI/res/values/dimens.xml
+++ b/overlay/SM6250SystemUI/res/values/dimens.xml
@@ -15,10 +15,13 @@
     <!-- Pad content in navbar for rounded corners -->
     <dimen name="rounded_corner_content_padding">16dp</dimen>
 
+    <!-- The padding on the top of the statusbar (usually 0) -->
+    <dimen name="status_bar_padding_top">24.0px</dimen>
+    
     <!-- The padding on the start of the statusbar -->
     <dimen name="status_bar_padding_start">0dp</dimen>
 
     <!-- The padding on the end of the statusbar -->
     <dimen name="status_bar_padding_end">1dp</dimen>
-    
+
 </resources>
