--- a/overlay/SM6250Frameworks/res/values/config.xml
+++ b/overlay/SM6250Frameworks/res/values/config.xml
@@ -725,4 +725,6 @@
         <item>com.google.android.gms/com.google.android.gms.nearby.discovery.service.DiscoveryService</item>
     </string-array>
 
+    <!-- Whether the device supports Smart Pixels -->
+    <bool name="config_supportSmartPixels">true</bool>
 </resources>
